[package]
name = "buny"
version = "0.1.0"
edition = "2021"
publish = true

[dependencies]
buny_imports = { path = "../imports" }
buny_macros = { path = "../macros" }
buny_proc_macros = { path = "../proc_macros" }
dlmalloc = { version = "0.2.4", optional = true, features = ["global"] }
buny_helpers = { path = "../helpers", optional = true }

[features]
default = ["dlmalloc"]
helpers = ["buny_helpers"]
